--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -11,7 +11,7 @@
   <body>
 
     <div class="logo">
-    <img src="/Users/breanaingram/Desktop/UX_UI_HW_18./IMAGES/logo-png.png" class="center" alt="logo-png" width="1000" height="200">
+    <img src="IMAGES/logo-png.png" class="center" alt="logo-png" width="1000" height="200">
 </div>
 
 <br>
@@ -38,7 +38,7 @@
 
 <div>
     <heroimg>
-        <img class="one" src="/Users/breanaingram/Desktop/UX_UI_HW_18./IMAGES/image 2.png" class="center" alt="About Me image" height="350" width="350">
+        <img class="one" src="IMAGES/image 2.png" class="center" alt="About Me image" height="350" width="350">
         <br>
         <p class="two">I specialize in web design and I enjoy enhancing the users experience by creatively developing new design concepts and solving problems for the the average user.</p>
         
